@@ -1,4 +1,4 @@
-@comment $NetBSD: PLIST,v 1.30 2004/07/01 15:14:03 recht Exp $
+@comment $NetBSD: PLIST,v 1.31 2004/07/06 13:52:25 xtraeme Exp $
 bin/xml2-config
 bin/xmlcatalog
 bin/xmllint
@@ -51,7 +51,7 @@ lib/libxml2.a
 lib/libxml2.la
 lib/libxml2.so
 lib/libxml2.so.8
-lib/libxml2.so.8.10
+lib/libxml2.so.8.11
 lib/pkgconfig/libxml-2.0.pc
 lib/xml2Conf.sh
 man/man1/xml2-config.1
